# Prelegal

./: .dockerignore  .gitignore  CLAUDE.md  README.md  catalog.json  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  schema.py
backend/app/repositories/: document_drafts.py  users.py
backend/app/services/: document_chat.py
backend/tests/: test_database_reset.py  test_document_chat.py  test_document_drafts.py  test_health.py  test_session_login.py
frontend/: .gitignore  Dockerfile  eslint.config.mjs  manual-test-checklist.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/app/: layout.tsx  page.tsx
frontend/src/components/: AppShell.tsx  LoginForm.tsx  MutualNdaForm.tsx
frontend/src/components/document-workspace/: DocumentChatPanel.tsx  GenericDocumentEditor.tsx  GenericDocumentReviewPanel.tsx  InputModeToggle.tsx  MutualNdaReviewPanel.tsx  MutualNdaWorkspace.tsx
frontend/src/data/templates/: Mutual-NDA-coverpage.md
frontend/src/lib/: api.ts  documentDrafts.ts  documentRegistry.ts  pdf.ts
frontend/src/test/: LoginForm.dom.test.tsx  MutualNdaForm.dom.test.tsx  MutualNdaWorkspace.dom.test.tsx  downloadRoute.test.ts  pdf.test.ts  renderMutualNda.test.ts  schema.test.ts
frontend/src/test/e2e/: login-dashboard.spec.ts  mutual-nda.spec.ts
scripts/: start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt  design-partner-agreement.md
(+3 files in other folders)
