[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal backend foundation"
requires-python = ">=3.12"
dependencies = [
  "email-validator>=2.2.0",
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
